# AsterClaw

./: .gitignore  Cargo.toml  README.PT_BR.md  README.RU.md  README.md
.github/workflows/: build.yml  ci.yml  docs-pages.yml
config/: config.example.json
docs/: book.pt-br.toml  book.ru.toml  book.toml  index.html  lang-switcher.css  lang-switcher.js
docs/src/: SUMMARY.md  architecture.md  cli-reference.md  configuration.md  deployment-github-pages.md  developer-guide.md  getting-started.md  index.md  operations.md  profiling.md  security.md  tools.md
docs/src/en/: SUMMARY.md  architecture.md  cli-reference.md  configuration.md  deployment-github-pages.md  developer-guide.md  getting-started.md  index.md  operations.md  profiling.md  security.md  tools.md
docs/src/pt-br/: SUMMARY.md  architecture.md  cli-reference.md  configuration.md  deployment-github-pages.md  developer-guide.md  getting-started.md  index.md  operations.md  profiling.md  security.md  tools.md
scripts/: README.md  nfr-harness.ps1  nfr_baseline.ps1
src/: agent.rs  auth.rs  bus.rs  channels.rs  config.rs  constants.rs  context_builder.rs  cron.rs  devices.rs  health.rs  heartbeat.rs  logger.rs  main.rs  memory.rs  migrate.rs  session.rs  skills.rs  state.rs  tools.rs  voice.rs
src/providers/: mod.rs  types.rs
src/tools/: cron_tool.rs  device.rs  exec.rs  fs.rs  memory_tool.rs  messaging.rs  mod.rs  web.rs
tests/: e2e_mvp.rs  e2e_real_model.rs
