[package]
name = "picors"
version = "0.1.0"
edition = "2024"
description = "Ultra-lightweight personal AI agent - Rust port of PicoRS"
authors = ["PicoRS Contributors"]
license = "MIT"
repository = "https://github.com/sipeed/picors"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web servers and HTTP
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
hyper = "1.5"
hyper-util = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
envy = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# OAuth2 with PKCE
oauth2 = "5.0"
base64 = "0.22"

# WebSocket
tokio-tungstenite = "0.26"

# Async channels
flume = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# File handling
dirs = "5.0"
walkdir = "2.5"

# Shell execution
which = "7.0"

# Regex
regex = "1.11"

# URL parsing
url = "2.5"

# Async trait support
async-trait = "0.1"

# Readline / interactive input
rustyline = "15"

# Anyhow for error handling
anyhow = "1.0"

# Thiserror
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# parking_lot for mutex
parking_lot = "0.12"

# once_cell for lazy statics
once_cell = "1.20"

# async-stream for async iterators
async-stream = "0.3"

# futures for async utilities
futures = "0.3"

# bytes for handling bytes
bytes = "1.10"

# mime types
mime = "0.3"

# glob for file patterns
glob = "0.3"

# tempfile for temporary files
tempfile = "3"

# notify for file watching
notify = "7"

# sysinfo for system info
sysinfo = "0.33"

# rust-i18n for internationalization
rust-i18n = "3"

# home for home directory
home = "0.5"

# open for opening URLs in browser
open = "5"

# toml for config parsing
toml = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]

[features]
default = ["full"]
full = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
