[package]
name = "asterclaw"
version = "0.1.0"
edition = "2024"
description = "Ultra-lightweight personal AI agent"
authors = ["FerrisMind"]
license = "MIT"
repository = "https://github.com/sipeed/asterclaw"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "process", "time", "signal"] }

# Web server
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] } 

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# File handling
dirs = "5.0"
walkdir = "2.5"

# Regex
regex = "1.11"

# URL parsing
url = "2.5"

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
once_cell = "1.20"

# Glob patterns
glob = "0.3"

# Temp files (used for atomic writes in cron, session, state)
tempfile = "3"

# Cron expression parsing
cron = "0.15"

[dev-dependencies]

[build-dependencies]

[features]
default = ["full"]
full = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

